--- a/.github/workflows/deploy_template.yml
+++ b/.github/workflows/deploy_template.yml
@@ -30,15 +30,15 @@ jobs:
           ${{ secrets.DOCKER_HUB_USERNAME }}/lab10:ebs_frontend
 
     - name: Generate deployment package
-      run: zip -r deploy.zip . -x '*.git*'
+      run: zip -r deploy.zip ./docker-compose.yml
 
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v21
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: MyApplicationName
-        environment_name: MyApplication-Environment
-        version_label: 12345
+        application_name: docker-test
+        environment_name: Dockertest-env
+        version_label: lab10v1
         region: us-east-1
-        deployment_package: deploy_template.zip
+        deployment_package: deploy.zip
